# stm32f0-smbus-module

./: .embed.toml  Cargo.toml  Embed.toml  test_i2c.py
.github/workflows/: rust.yml
src/: main.rs  smbus.rs
