[package]
name = "stm32f0-smbus-module"
version = "0.2.0"
authors = ["Rafael Bachmann <rafael.bachmann.93@gmail.com>"]
edition = "2018"

[dependencies.defmt]
git = "https://github.com/knurling-rs/defmt"
branch = "main"

[dependencies]
embedded-hal = "0.2.4"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-halt = "0.2.0"
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }
cortex-m = "0.6.3"
cortex-m-rtic = { version = "0.5.5" }
stm32f0xx-hal = { version = "0.17.1", features = ["rt", "stm32f072"] }
smbus-slave-state-machine = { git = "https://github.com/barafael/smbus-slave-state-machine", branch = "main" }
